# kova-ubuntu

./: CLAUDE.md  Cargo.toml  README.md  RELEASE-NOTES.md  keyboard-shortcuts.md  release-notes.md  roadmap.md
shaders/: terminal.wgsl
src/: app.rs  config.rs  input.rs  install.rs  ipc.rs  keybindings.rs  main.rs  pane.rs  session.rs  window.rs
src/renderer/: glyph_atlas.rs  mod.rs  pipeline.rs  vertex.rs
src/terminal/: mod.rs  parser.rs  pty.rs
