[package]
name = "kova"
version = "1.1.5"
edition = "2024"

[dependencies]
winit = "0.30"
wgpu = "24"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
freetype-rs = "0.37"
rustybuzz = "0.18"
fontconfig = "0.7"
arboard = "3"
directories = "6"
vte = "0.15"
rustix = { version = "1.0", features = ["termios", "process", "stdio"] }
rustix-openpty = "0.2"
parking_lot = "0.12"
log = "0.4"
simplelog = "0.12"
bitflags = "2"
unicode-width = "0.2"
unicode-segmentation = "1"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
